# godot-cpp-cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_all.sh  project.godot  scene.tscn
cmake/: FindEASTL.cmake  FindGodot.cmake  FindGodotCPP.cmake
src/: SimpleClass.gdns  gdlibrary.cpp  simple_class.cpp  simple_class.h
